# Airbus-Ship-Detection

./: .gitignore  Airbus_Ship_Detection.ipynb  Home_Credit_Default_Risk.ipynb  README.md  customer_analysis_grocery_chain.ipynb  inference_script.py  loss.py  pyproject.toml  requirements.txt  requirements_test.txt  test.ipynb  test.py  train.ipynb  train.py
.github/workflows/: ci.yml
airbus_ship_detection/: data_exploration.py  data_processing.py  inference_script.py  model.py  train.py
airbus_ship_detection/utils/: loss.py
notebooks/: test.ipynb  train.ipynb
tests/unit/: test_data_processing.py
