[tool.poetry]
name = "airbus-ship-detection"
version = "0.1.0"
description = ""
authors = ["KharchenkoAnastasia <kharchenko.13.08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
onetoonemap = "^1.0.0"
package-name = "^0.1"
requests = "^2.32.3"
numpy = "^2.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
