[tool.poetry]
name = "airbus-ship-detection"
version = "0.1.0"
description = ""
authors = ["KharchenkoAnastasia <kharchenko.13.08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
onetoonemap = "^1.0.0"
package-name = "^0.1"
requests = "^2.32.3"
numpy = "1.26.4"
pandas = "^2.2.2"
scikit-learn = "1.5.1"
tensorflow = "2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
