[build-system]
requires = ["setuptools>=72.2.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["airbus_ship_detection"]

[project]
name = "airbus-ship-detection"
version = "0.1.0"
requires-python = ">= 3.9"
description = ""
authors = [
    { name = "KharchenkoAnastasia", email = "kharchenko.13.08@gmail.com" },
]
readme = "README.md"
dependencies = [
    "onetoonemap",
    "requests",
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow"
    ]

[project.optional-dependencies]
tests = [
    "pytest",
    "ruff",
    "mypy"
    ]

[tool.mypy]
files = ["airbus_ship_detection"]
plugins = ["numpy.typing.mypy_plugin"]
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "scipy.*",
  "sklearn.*",
  "inflect.*",
  "transformers.*",
  "pattern.text.en.*",
  "nltk.*"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "I"          # isort
]
